feat:修改整个AI时报的逻辑